[project]
name = "etl-in"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "connectorx>=0.4.5",
    "fastexcel>=0.20.2",
    "itables>=2.7.3",
    "pandas>=2.3.3",
    "polars>=1.40.1",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pymysql>=1.1.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]
